Making Channel type generic.